--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,19 +14,65 @@
   <body>
     <h1>Generador de Numeros de bingo</h1>
     <p>Numero: <span class="number">0</span></p>
-    <button id="btn-generate-number" class="btn btn-primary">Generar numero</button>
-    <script src="../public/app.js"></script>
-    <script>
+    <button id="btn-generate-number" class="btn btn-primary">Generar número</button>
+    <button id="btn-generate-primer" class="btn btn-primary">Generar Caritilla</button>
+    <div class="primer">
+      <table class="table">
+       <thead>
+          <tr>
+            <th scope="col">B</th>
+            <th scope="col">I</th>
+            <th scope="col">N</th>
+            <th scope="col">G</th>
+            <th scope="col">O</th>
+          </tr>
+        </thead>
+        <tbody class="primer-body">
 
+        </tbody>
+      </table>
+    </div>
+    <script src="../public/app.js"></script>
+
+    <script>
       let number = document.querySelector(".number"); 
-      let btn = document.querySelector("#btn-generate-number"); 
+      let btnNumber = document.querySelector("#btn-generate-number"); 
+      let btnPrimer = document.querySelector("#btn-generate-primer"); 
+      let primer = document.querySelector(".primer-body");
+
       const getNumber = async () => { 
         const response = await fetch('http://localhost:3000/api/bingo/number'); 
-        const data = await response.json(); return data.number; } 
-        btn.addEventListener('click', async () => { 
+        const data = await response.json(); 
+        return data.number; 
+      } 
+
+      const getPrimer =  async () => { 
+        const response = await fetch('http://localhost:3000/api/bingo/primer'); 
+        const data = await response.json(); 
+        return data; 
+      } 
+
+      btnNumber.addEventListener('click', async () => { 
           number.innerHTML = await getNumber(); 
       })
-      
+
+      btnPrimer.addEventListener('click', async () => { 
+        let primerData  = await getPrimer();
+        primer.innerHTML = '';
+        printNumbers(primerData.primer);
+      })
+
+      const printNumbers = (data) => {
+
+        for(let i = 0; i < 5; i++) {
+          let row = document.createElement("tr");
+          let tdata = document.createElement("td");
+           for(let key in data ) {
+              row.innerHTML += `<td> ${data[key][i]} </td>`;
+           }
+          primer.appendChild(row);
+        }
+      }
     </script>
   </body>
 </html>
